# cpkAnalysis

./: .gitignore  .gitmodules  CONTRIBUTING.md  CPKAnalysisPlan.txt  LICENSE  PostProcessingPlan.txt  PostProcessingReport.txt  README.md  ShiftAnalysisPlan.txt  TEST_PLAN.md  THIRD_PARTY_LICENSES.txt  addBoxCharts.py  addCharts.py  addHistoCharts.py  mergeXlsx.py  post_processing_profile.toml  pyproject.toml  read_directory.py  requirements.txt
.claude/: settings.local.json
Architectural Plans/: STDF_Core_Design.md
FinalizeLimits/: shinynew.json
Optimization notes/: README.txt
cpkanalysis/: cli.py  event_names.py  gui.py  ingest.py  models.py  move_to_template.py  mpl_charts.py  outliers.py  pipeline.py  plotly_charts.py  plugin_profiles.py  plugins.py  session_prune.py  stats.py  workbook_builder.py
debug_logs/: analysis.json  analysis_chartfixes.json  scan.json
docs/: STDF_INGESTION.md  STDF_PARSER_ERROR_RECOVERY_GUIDE.md  STDF_PARSING_GUIDE.md  STDF_PARSING_INVESTIGATION.md  cpk_formula_update_plan.md  per_site_site_breakdown_plan.md  proposed_limits_capability_plan.md
help/: chart_generation.html  cli_reference.html  getting_started.html  gui_reference.html  index.html  manual_verification.html  post_processing.html  statistical_analysis.html  stdf_ingestion.html  temporary_note.txt  testing_guidance.html
shiftanalysis/: cli.py  gui.py  models.py
t2k_large/: t2k_large_try.json
tests/: test_cli_commands.py  test_gui_helpers.py  test_gui_resume.py  test_ingest_limits.py  test_ingest_sources.py  test_integration_postprocess.py  test_move_to_template.py  (+19 more)
(+21 files in other folders)
