[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpkanalysis"
version = "0.1.0"
description = "CPK analysis workflow toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "pyarrow>=21.0.0",
    "matplotlib>=3.10.6",
]

[tool.pytest.ini_options]
addopts = "--cov=cpkanalysis --cov-report=term-missing"
testpaths = ["tests"]
